--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://k-e-m-i.github.io/Moon
+url:                
+base_url: "/Moon"
 
 # Jekyll
 permalink:          /:title/
