--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                
-base_url: "/Moon"
+baseurl: "/Moon"
 
 # Jekyll
 permalink:          /:title/
